docs: fix typecheck (#22452)
* docs: fix typecheck

* chore: undo lock

* chore: set react stub in gitignore

* chore: try be kind on windows

* chore: try be kind on windows v2

* chore: try be kind on windows v3

don't ignore stub

* chore: use Vue 3.4.31

* fix: import jsx from vue

---------

Co-authored-by: dopamine <coderzyou@gmail.com>

--- a/docs/package.json
+++ b/docs/package.json
@@ -38,6 +38,7 @@
     "vite-plugin-inspect": "^0.8.7",
     "vite-plugin-mkcert": "^1.17.6",
     "vitepress": "^1.2.3",
-    "vitepress-plugin-group-icons": "^1.3.4"
+    "vitepress-plugin-group-icons": "^1.3.4",
+    "vue": "3.4.31"
   }
 }
