--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -13,10 +13,12 @@
     "lib": ["ESNext", "DOM"],
     "paths": {
       "element-plus": ["../packages/element-plus"],
-      "~/*": ["./.vitepress/vitepress/*"]
+      "~/*": ["./.vitepress/vitepress/*"],
+      "vue": ["./node_modules/vue"]
     },
     "types": ["unplugin-icons/types/vue"],
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "jsxImportSource": "vue"
   },
   "include": ["**/*", ".vitepress/**/*", "../typings/global.d.ts"],
   "exclude": ["node_modules"]
