ci: fix remove conflict label (#22882)

--- a/.github/workflows/pr-conflict.yml
+++ b/.github/workflows/pr-conflict.yml
@@ -31,8 +31,9 @@ jobs:
       - name: Remove conflict pending label
         if: |
           github.repository_owner == 'element-plus' &&
-          github.event.pull_request.mergeable_state == 'clean'
+          github.event.pull_request.mergeable
         uses: actions-cool/issues-helper@v3
         with:
           actions: 'remove-labels'
           labels: 'conflict pending'
+          issue-number: ${{ github.event.pull_request.number }}
